--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "name": "frictionlessdata/tableschema",
     "description": "A utility library for working with [Table Schema](https://specs.frictionlessdata.io/table-schema/)",
+    "--require-comments--": "we should be able to support older php versions, see comments on .travis.yml",
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=7"
     },
     "require-dev": {
         "behat/behat": "^3.3",
