--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
         "psr-4": {
             "frictionlessdata\\tableschema\\": "src/"
         }
+    },
+    "scripts": {
+        "test": "behat"
     }
 }
