--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     },
     "require-dev": {
         "behat/behat": "^3.3",
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -16,6 +17,6 @@
         }
     },
     "scripts": {
-        "test": "behat && phpunit --debug tests/"
+        "test": "behat && phpunit --debug tests/ --coverage-clover coverage-clover.xml --whitelist src/"
     }
 }
