--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ php:
   - nightly
   - hhvm
 before_script:
-  - composer install --prefer-dist
+  - COMPOSER_DISABLE_XDEBUG_WARN=1 composer install --prefer-dist
 script:
-  - composer test
+  - COMPOSER_DISABLE_XDEBUG_WARN=1 TABLESCHEMA_ENABLE_FRAGILE_TESTS=1 composer test
 after_success:
   - vendor/bin/coveralls
