--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
         "justinrainbow/json-schema": "^5.2"
     },
     "require-dev": {
-        "behat/behat": "^3.3",
         "phpunit/phpunit": "^4.8.35",
         "satooshi/php-coveralls": "^1.0"
     },
@@ -17,6 +16,6 @@
         }
     },
     "scripts": {
-        "test": "behat && phpunit --debug tests/ --coverage-clover coverage-clover.xml"
+        "test": "phpunit --debug --bootstrap tests/autoload.php tests/ --coverage-clover coverage-clover.xml"
     }
 }
