casting and better validation support
* cast value and field objects
* added schema validateRow / castRow
* changed table to use schema castRow
* have coverage run only on the latest python version

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_script:
 script:
   - COMPOSER_DISABLE_XDEBUG_WARN=1 TABLESCHEMA_ENABLE_FRAGILE_TESTS=1 composer test
 after_success:
-  - vendor/bin/coveralls
+  - '[ "$TRAVIS_PHP_VERSION" == "7.1" ] && vendor/bin/coveralls'
