--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ before_script:
   - COMPOSER_DISABLE_XDEBUG_WARN=1 composer install --prefer-dist
 script:
   - COMPOSER_DISABLE_XDEBUG_WARN=1 TABLESCHEMA_ENABLE_FRAGILE_TESTS=1 composer test
+  - COMPOSER_DISABLE_XDEBUG_WARN=1 composer style-check
 after_success:
   - '[ "$TRAVIS_PHP_VERSION" == "7.1" ] && vendor/bin/coveralls'
