--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8.35",
         "satooshi/php-coveralls": "^1.0",
-        "psy/psysh": "@stable"
+        "psy/psysh": "@stable",
+        "friendsofphp/php-cs-fixer": "^2.3"
     },
     "autoload": {
         "psr-4": {
@@ -17,6 +18,8 @@
         }
     },
     "scripts": {
-        "test": "phpunit --debug --bootstrap tests/autoload.php tests/ --coverage-clover coverage-clover.xml"
+        "test": "phpunit --debug --bootstrap tests/autoload.php tests/ --coverage-clover coverage-clover.xml",
+        "style-check" : "php-cs-fixer fix --dry-run --verbose --diff",
+        "style-fix" : "php-cs-fixer fix --verbose"
     }
 }
