--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8.35",
         "satooshi/php-coveralls": "^1.0",
-        "psy/psysh": "@stable",
-        "friendsofphp/php-cs-fixer": "^2.3"
+        "psy/psysh": "@stable"
     },
     "autoload": {
         "psr-4": {
