Code style fixes (#23)
* added code style check and fix support
* added update-schema script + updated the schema
* support foreignKeys / primaryKey string fields (to match latest table schema)
* remove hhvm support - it's not needed and causes too much problems

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ php:
   - '7.0'
   - '7.1'
   - nightly
-  - hhvm
 before_script:
   - COMPOSER_DISABLE_XDEBUG_WARN=1 composer install --prefer-dist
 script:
   - COMPOSER_DISABLE_XDEBUG_WARN=1 TABLESCHEMA_ENABLE_FRAGILE_TESTS=1 composer test
+  - '[ "$TRAVIS_PHP_VERSION" != "7.1" ] || composer style-check'
 after_success:
   - '[ "$TRAVIS_PHP_VERSION" == "7.1" ] && vendor/bin/coveralls'
