--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=5.4",
         "justinrainbow/json-schema": "^5.2",
-        "nesbot/carbon": "^1.22"
+        "nesbot/carbon": "^1.22",
+        "jmikola/geojson": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.35",
