--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     },
     "scripts": {
-        "test": "phpunit --debug --bootstrap tests/autoload.php tests/ --coverage-clover coverage-clover.xml",
+        "test": "phpunit --bootstrap tests/autoload.php tests/ --coverage-clover coverage-clover.xml",
         "update-schema": "php update-schema.php",
         "style-check": "./.install_cs_fixer.sh && ./php-cs-fixer fix --dry-run --verbose --diff",
         "style-fix": "./.install_cs_fixer.sh && ./php-cs-fixer fix --verbose"
