--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A utility library for working with Table Schema",
     "license": "MIT",
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.1.0 <7.4.0",
         "justinrainbow/json-schema": "^5.2",
         "nesbot/carbon": "^1.22",
         "jmikola/geojson": "^1.0"
