--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,4 @@ jobs:
             - uses: actions/checkout@v2
 
             - name: Validate composer.json & composer.lock for PHP ${{ matrix.php-versions }}
-              uses: php-actions/composer@v6
-              with:
-                  php_version: ${{ matrix.php-versions }}
-                  php_extensions: mbstring
-                  version: 2
-                  command: validate --strict
+              run: composer validate --strict
