--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,12 @@ jobs:
 
             - name: Validate composer.json & composer.lock for PHP ${{ matrix.php-versions }}
               run: composer validate --strict
+
+            - name: Cache Composer dependencies
+              id: composer-cache
+              uses: actions/cache@v2
+              with:
+                  path: vendor
+                  key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-php-
