--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,33 +6,14 @@ on:
         branches: [ main ]
 jobs:
     build:
-        runs-on: ${{ matrix.operating-system }}
-        strategy:
-            matrix:
-                operating-system: [ubuntu-latest]
-                php-versions: ['7.1', '7.4']
+        runs-on: ubuntu-latest
 
-        name: frictionlessdata/tableschema-php PHP ${{ matrix.php-versions }} test on ${{ matrix.operating-system }}
+        name: frictionlessdata/tableschema-php test
 
         steps:
             - uses: actions/checkout@v2
 
-            - name: Validate composer.json & composer.lock for PHP ${{ matrix.php-versions }}
+            - name: Validate composer.json & composer.lock
               uses: php-actions/composer@v6
               with:
-                  php_version: ${{ matrix.php-versions }}
-                  php_extensions: zip
-                  version: 2
                   command: validate --strict
-
-            - name: Cache Composer dependencies
-              id: composer-cache
-              uses: actions/cache@v2
-              with:
-                  path: vendor
-                  key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-php-
-
-            - name: Install dependencies
-              run: composer install --prefer-dist --no-progress
