Add step to validate composer config and cache the packages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,24 @@ jobs:
         steps:
             - uses: actions/checkout@v2
 
-            - name: Setup PHP with PECL extension
+            - name: Setup PHP version ${{ matrix.php-versions }}
               uses: shivammathur/setup-php@v2
               with:
                   php-version: ${{ matrix.php-versions }}
 
-            - name: Check PHP Version
+            - name: Confirm PHP Version
               run: php -v
+
+            -   name: Validate composer.json and composer.lock
+                run: composer validate --strict
+
+            -   name: Cache Composer packages
+                id: composer-cache
+                uses: actions/cache@v2
+                with:
+                    path: vendor
+                    key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+                    restore-keys: |
+                        ${{ runner.os }}-php-
+            -   name: Install dependencies
+                run: composer install --prefer-dist --no-progress
