--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
                   TABLESCHEMA_ENABLE_FRAGILE_TESTS: 1
 
             - name: Submit test coverage to Coveralls
-              uses: coverallsapp/github-action@master
-              with:
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
+              run: vendor/bin/php-coveralls
+              env:
+                  COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               if: success() && matrix.php-version == '7.4'
