--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "jmikola/geojson": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": ">=7.0",
         "php-coveralls/php-coveralls": "^2.4",
         "psy/psysh": "@stable",
         "roave/security-advisories": "dev-latest"
