--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,8 +10,11 @@ jobs:
         strategy:
             matrix:
                 php-version: ['7.1', '7.2', '7.3', '7.4', '8.0']
+                composer-prefer:
+                    - '--prefer-dist'
+                    - '--prefer-stable --prefer-lowest'
 
-        name: frictionlessdata/tableschema-php PHP ${{ matrix.php-version }} test
+        name: Test PHP ${{ matrix.php-version }} / composer ${{matrix.composer-prefer}}
 
         steps:
             - uses: actions/checkout@v2
@@ -36,7 +39,7 @@ jobs:
                   restore-keys: |
                       ${{ runner.os }}-php-
             - name: Install dependencies
-              run: composer install --prefer-dist --no-progress
+              run: composer install ${{ matrix.composer-prefer }} --no-progress
 
             - name: Run Code Style Check for PHP ${{ matrix.php-version }}
               run: composer run-script style-check
