--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                php-version: ['7.1', '7.2', '7.3', '7.4', '8.0']
+                php-version: ['7.1', '7.2', '7.3', '7.4', '8.0', '8.1']
                 composer-prefer:
                     - '--prefer-dist'
                     - '--prefer-stable --prefer-lowest'
@@ -39,7 +39,9 @@ jobs:
                   restore-keys: |
                       ${{ runner.os }}-php-
             - name: Install dependencies
-              run: composer update ${{ matrix.composer-prefer }} --no-progress
+              run: |
+                  composer update ${{ matrix.composer-prefer }} --no-progress
+                  composer update phpunit/phpunit --no-progress
 
             - name: Run Code Style Check for PHP ${{ matrix.php-version }}
               run: composer run-script style-check
