--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,6 +2,10 @@
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/7.5/phpunit.xsd"
          bootstrap="vendor/autoload.php">
+    <php>
+        <ini name="display_errors" value="On" />
+        <ini name="error_reporting" value="24575" />
+    </php>
     <testsuites>
         <testsuite name="default">
             <directory>tests</directory>
